...
                                <rect key="frame" x="162" y="590" width="51" height="28"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                    <constraint firstAttribute="height" constant="39" id="ZGv-DL-iDp"/>
                                </constraints>
                                <state key="normal" title="Login" backgroundImage="loginBackgroun">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Submit" backgroundImage="loginBackgroun">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
            <objects>
                <navigationController id="KUL-kr-iRH" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Play" image="flag-7" id="K9s-NO-QT7"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="piS-S3-idh">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Bi-KY-E4t">
                                <rect key="frame" x="324" y="82" width="35" height="22"/>
                                <state key="normal" image="Next Arrow">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Continue" backgroundImage="scorecardBackgroun">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
            <objects>
                <navigationController id="0hi-EI-56a" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Practice" image="plus-simple-7" id="rDh-T8-eab"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Hwc-q1-6IJ">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
                        <viewLayoutGuide key="safeArea" id="rKB-oE-Mrx"/>
                    </view>
                    <navigationItem key="navigationItem" title="Swings" id="y3Q-Cy-kcJ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wgu-ru-hEf">
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="QBO-Pl-xE1"/>
                    </view>
                    <navigationItem key="navigationItem" title="Scorecard" largeTitleDisplayMode="always" id="JhN-RE-5JO">
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="uIm-eu-wjj">
                            <connections>
                                <segue destination="L7c-Bf-6WN" kind="presentation" id="72G-sU-1fX"/>
...
