...

    @IBOutlet weak var startingHoleTextfield: UITextField!
    @IBOutlet weak var courseLabel: UILabel!
    @IBOutlet weak var addressLabel: UILabel!
    var course:Course?
    var pickedHole = 0
    var holes = ["One (1)", "Two (2)", "Three (3)", "Four (4)", "Five (5)", "Six (6)",
                 "Seven (7)", "Eight (8)", "Nine (9)", "Ten (10)", "Eleven (11)", "Twelve (12)",
                 "Thirteen (13)", "Fourteen (14)", "Fifteen (15)", "Sixteen (16)", "Seventeen (17)", "Eighteen (18)"]
    
    override func viewDidLoad() {
        super.viewDidLoad()
        let pickerView = UIPickerView()
...
