...
        alert.addTextField(configurationHandler: { textField in
            textField.keyboardType = .numberPad
        })
        
        
        // adds functionality to allow user to input a distance for a new swing
        let submitAction = UIAlertAction(title: "Add", style: .default, handler: { (action) -> Void in
            // Get 1st TextField's text

            let textField = alert.textFields![0]
            let textfieldInt: Int? = Int(textField.text!)
            
            //Error Checking for values over 300
...
