...
                                defaults.set(true, forKey: "isLoggedIn")
                                print("succesfuly stored")
                                self.dismiss(animated: true, completion: {})
                            }
                        })
                    }else{
                        let alert = UIAlertController(title: "Unable to Login", message: "Email or Password Invalid", preferredStyle: UIAlertControllerStyle.alert)
                            alert.addAction(UIAlertAction(title: "Ok", style: .default, handler:{ (action: UIAlertAction!) in
                            alert.dismiss(animated: true, completion: nil)
                        }))
                            self.present(alert, animated: true, completion: nil)
                        }
                })
            }
...
